--- a/index.html
+++ b/index.html
@@ -6,53 +6,45 @@
     <title>Maurits Wilke</title>
 
     <meta charset="UTF-8">
-    <meta name="description" content="Maurits Wilke - Hobby Dev">
-    <meta name="keywords" content="Maurits Wilke, hobby dev, portfolio">
+    <meta name="description" content="Maurits Wilke - Portfolio Site">
+    <meta name="keywords" content="Maurits Wilke, developer, portfolio">
     <meta name="author" content="Maurits Wilke">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta content="Maurits Wilke" property="og:title">
+    <meta content="Maurits Wilke = Portfolio Site" property="og:description">
+    <meta content="https://www.mauritswilke.com" property="og:url">
+    <meta content="#43B581" data-react-helmet="true" name="theme-color">
+
     <link rel="stylesheet" href="index.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <script src="main.js"></script>
 
 </head>
 
-<body>
-    <p id="RESPONSIVE">Look buddy, responsive design will be added eventually. <br> Give me a break</p>
-    <div id="wrapper">
+    <body>
+        <header>
+            <nav>
+                <!-- Name and  'navigation' -->
+            </nav>
+        </header>
 
-        <div id="navbar">
-            <ul id="menu">
-                <li><a href="#" id="name">Maurits Wilke</a></li>
-                <li><a href="#" class="navElement">About</a></li>
-                <li><a href="#" class="navElement">Projects</a></li>
-            </ul>
-        </div>
-        <div id="main" class="Content">
-            <h2>Yeah so im a dev</h2>
-            <p>im a developer, not a graphical designer <br> please stop shitting on my css u hurt my <br> feelings, i tried really hard and used paint.net</p>
-            <p>in other things about me, yeah i do backend <br> i would say im like medium skill level? <br> idk bro i just do what i think will work and <br> if it doesnt work i use ✨ google ✨ <br> thats what i call skill</p>
+        <section>
+            <!-- About -->
+        </section>
 
-            <p>also im maurits btw <br> give me your money ty</p>
-        </div>
+        <section>
+            <!-- Projects -->
+        </section>
 
-        <div id="second" class="Content">
-            <h2>Recent project:</h2>
-            <p>Recent projects i made will be shown here. <br><br> Gonna be interesting at backend to see if i can automate it instead of manually changing it everytime i make something new, but thatll be a later project <br><br> First on the list, unity</p>
-        </div>
+        <section>
+            <!-- Contact OR cats -->
+        </section>
 
-        <div id="third" class="Content">
-            <h2>About this website</h2>
-            <p>This website was designed in paint.net, <br> i really tried my hardest :) <br><br> The font used is Roboto from google fonts<br> with custom letter spacing and size etc <br><br> Yeah ill just show projects i make on this site <br> I hope they look better than this website itself...</p>
-            <img src="images/Colour Palette.png">
-        </div>
+        <footer>    
+            <!-- Or contact here -->
+        </footer>
 
-        <div id="bottom">
-            <a id="copyright">©Maurits Wilke - 2021</a>
-            <a id="hidden">Totally real :)</a>
-        </div>
 
-    </div>
-</body>
+    </body>
 
 </html>
