--- a/index.html
+++ b/index.html
@@ -21,30 +21,55 @@
 
 </head>
 
-    <body>
-        <header>
-            <nav>
-                <!-- Name and  'navigation' -->
-            </nav>
-        </header>
+<body>
+    <header>
+        <!-- Name and  'navigation' -->
+        <nav>
+            <h1>Maurits Wilke</h1>
+            <ul>
+                <li>About</li>
+                <li>Projects</li>
+                <li>Cats</li>
+                <li>Contact</li>
+            </ul>
 
-        <section>
-            <!-- About -->
-        </section>
+        </nav>
+    </header>
 
-        <section>
-            <!-- Projects -->
-        </section>
+    <section>
+        <h2>About me</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos expedita sit ipsa! Impedit assumenda reiciendis
+            commodi, eaque voluptatibus alias! Officiis laudantium velit id quibusdam voluptatum at rerum, explicabo
+            sint sunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque rem quae dolore odit
+            eligendi, facere at voluptates aliquam, quam ex officiis, rerum totam eum enim aliquid molestias porro nulla
+            architecto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores porro laboriosam, nam quasi,
+            vero voluptatibus dolorem minima voluptate illum libero ab architecto sequi aut molestias nisi officiis et
+            officia ratione. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia eveniet, corrupti a minus
+            sint, minima corporis, quo accusamus maxime laudantium illo iste in temporibus asperiores! Voluptatibus
+            assumenda eligendi in commodi.</p>
+    </section>
 
-        <section>
-            <!-- Contact OR cats -->
-        </section>
+    <section>
+        <!-- Projects -->
+        <h2>Projects</h2>
+        <p>Latest project here with older projects to left and right (circle scroll 3d effect)</p>
+    </section>
 
-        <footer>    
-            <!-- Or contact here -->
-        </footer>
+    <section>
+        <h2>Contact Me</h2>
+        <p>Discord: The Almighty One#0001<br> Email: MauritsWilke@gmail.com <br> Mobile: <a href="tel:+310648379585">+31 (0) 648 379 585</a></p></p>
+        <!-- Contact OR cats -->
+    </section>
+
+    <footer>
+        <h2>Cats</h2>
+        <img src="./images/Colour Palette.png", width="120px">
+        <p>Cat one</p>
+        <img src="./images/Colour Palette.png", width="120px">
+        <p>Cat two</p>
+    </footer>
 
 
-    </body>
+</body>
 
 </html>
