final version of portfolio, please dont break uwu

--- a/index.html
+++ b/index.html
@@ -16,60 +16,27 @@
     <meta content="https://www.mauritswilke.com" property="og:url">
     <meta content="#43B581" data-react-helmet="true" name="theme-color">
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <script src="https://kit.fontawesome.com/fe20b86b3f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
-    <script src="main.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap" rel="stylesheet">
+
 
 </head>
 
 <body>
-    <header>
-        <!-- Name and  'navigation' -->
-        <nav>
+    <canvas id="canvas1"></canvas>
+    <script src="main.js"></script>
+
+    <div class="container">
+        <div id="card">
             <h1>Maurits Wilke</h1>
-            <ul>
-                <li>About</li>
-                <li>Projects</li>
-                <li>Cats</li>
-                <li>Contact</li>
-            </ul>
-
-        </nav>
-    </header>
-
-    <section>
-        <h2>About me</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos expedita sit ipsa! Impedit assumenda reiciendis
-            commodi, eaque voluptatibus alias! Officiis laudantium velit id quibusdam voluptatum at rerum, explicabo
-            sint sunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque rem quae dolore odit
-            eligendi, facere at voluptates aliquam, quam ex officiis, rerum totam eum enim aliquid molestias porro nulla
-            architecto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores porro laboriosam, nam quasi,
-            vero voluptatibus dolorem minima voluptate illum libero ab architecto sequi aut molestias nisi officiis et
-            officia ratione. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia eveniet, corrupti a minus
-            sint, minima corporis, quo accusamus maxime laudantium illo iste in temporibus asperiores! Voluptatibus
-            assumenda eligendi in commodi.</p>
-    </section>
-
-    <section>
-        <!-- Projects -->
-        <h2>Projects</h2>
-        <p>Latest project here with older projects to left and right (circle scroll 3d effect)</p>
-    </section>
-
-    <section>
-        <h2>Contact Me</h2>
-        <p>Discord: The Almighty One#0001<br> Email: MauritsWilke@gmail.com <br> Mobile: <a href="tel:+310648379585">+31 (0) 648 379 585</a></p></p>
-        <!-- Contact OR cats -->
-    </section>
-
-    <footer>
-        <h2>Cats</h2>
-        <img src="./images/Colour Palette.png", width="120px">
-        <p>Cat one</p>
-        <img src="./images/Colour Palette.png", width="120px">
-        <p>Cat two</p>
-    </footer>
-
-
+            <p>Hobby Developer</p>
+            <a href="https://www.github.com/MauritsWilke" class="fab fa-github"></a>
+            <a href="https://discordapp.com/users/378874450105466880/" class="fab fa-discord"></a>
+            <a href="mailto:mauritswilke@gmail.com" class="fab fa-google"></a>
+        </div>
+    </div>
 </body>
 
 </html>
