--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta content="Maurits Wilke" property="og:title">
-    <meta content="Maurits Wilke = Portfolio Site" property="og:description">
+    <meta content="Maurits Wilke portfolio site. Hobby dev" property="og:description">
     <meta content="https://www.mauritswilke.com" property="og:url">
     <meta content="#43B581" data-react-helmet="true" name="theme-color">
 
