--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
     <title>Maurits Wilke</title>
@@ -20,7 +20,7 @@
     <script src="https://kit.fontawesome.com/fe20b86b3f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap" rel="stylesheet">
-
+    <link rel="manifest" href="/manifest.json">
 
 </head>
 
