--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
     <title>Maurits Wilke</title>
 
@@ -21,6 +19,9 @@
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap" rel="stylesheet">
     <link rel="manifest" href="/manifest.json">
+    <!-- Ios Support because ios -->
+    <link rel="apple-touch-icon" href="icons/icon-96x96.png">
+    <meta name="apple-mobile-web-app-status-bar" content="#7289da">
 
 </head>
 
@@ -38,5 +39,4 @@
         </div>
     </div>
 </body>
-
 </html>
