--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name="author" content="Maurits Wilke">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta content="Maurits Wilke" property="og:title">
-    <meta content="Maurits Wilke portfolio site. Hobby dev" property="og:description">
+    <meta content="Maurits Wilke - Portfolio" property="og:title">
+    <meta content="Hi! Im Maurits, a hobby developer. This site is my portfolio site :)" property="og:description">
     <meta content="https://www.mauritswilke.com" property="og:url">
-    <meta content="#43B581" data-react-helmet="true" name="theme-color">
+    <meta content="#7289da" data-react-helmet="true" name="theme-color">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <script src="https://kit.fontawesome.com/fe20b86b3f.js" crossorigin="anonymous"></script>
