--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="icon" href="icons/firefox/firefox-general-16-16.png">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <script src="https://kit.fontawesome.com/fe20b86b3f.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap" rel="stylesheet">
     <link rel="manifest" href="/manifest.json">
@@ -34,9 +34,13 @@
         <div id="card">
             <h1>Maurits Wilke</h1>
             <p>Hobby Developer</p>
-            <a href="https://www.github.com/MauritsWilke" class="fab fa-github"></a>
-            <a href="https://discordapp.com/users/378874450105466880/" class="fab fa-discord"></a>
-            <a href="mailto:mauritswilke@gmail.com" class="fab fa-google"></a>
+            <div id="socials">
+                <a href="https://www.github.com/MauritsWilke" class="fab fa-github"></a>
+                <a href="https://discordapp.com/users/378874450105466880/" class="fab fa-discord"></a>
+                <a href="mailto:mauritswilke@gmail.com" class="fab fa-google"></a>
+                <a href="cats.html" class="fas fa-cat"></a>
+                <a href="tel:+31648379585" class="fas fa-phone"></a>
+            </div>
         </div>
     </div>
 </body>
