Updated the site Replaced tel with linkedIn

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a href="https://discordapp.com/users/378874450105466880/" class="fab fa-discord"></a>
                 <a href="mailto:mauritswilke@gmail.com" class="fab fa-google"></a>
                 <a href="cats.html" class="fas fa-cat"></a>
-                <a href="tel:+31648379585" class="fas fa-phone"></a>
+                <a href="www.linkedin.com/in/mauritswilke" class="fab fa-linkedin"></a>
             </div>
         </div>
     </div>
