--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 	<meta content="#7289da" data-react-helmet="true" name="theme-color">
 	<link rel="icon" href="../icons/firefox/firefox-general-16-16.png">
 
-	<link rel="stylesheet" href="../css/index.css">
+	<link rel="stylesheet" href="./css/index.css">
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<script src="https://kit.fontawesome.com/fe20b86b3f.js" crossorigin="anonymous"></script>
@@ -30,7 +30,7 @@
 
 <body>
 	<canvas id="canvas1"></canvas>
-	<script src="../js/main.js"></script>
+	<script src="./js/main.js"></script>
 
 	<div class="container">
 		<div id="card">
@@ -40,7 +40,7 @@
 				<a href="https://www.github.com/MauritsWilke" class="fab fa-github"></a>
 				<a href="https://discordapp.com/users/378874450105466880/" class="fab fa-discord"></a>
 				<a href="mailto:mauritswilke@gmail.com" class="fab fa-google"></a>
-				<a href="cats.html" class="fas fa-cat"></a>
+				<a href="./html/cats.html" class="fas fa-cat"></a>
 				<a href="https://www.linkedin.com/in/mauritswilke" class="fab fa-linkedin"></a>
 			</div>
 		</div>
