--- a/src/other/index.html
+++ b/src/other/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Wishlist</title>
+	<title>Maurits Wilke</title>
 
 	<meta charset="UTF-8">
 	<meta name="description" content="Maurits Wilke - Portfolio Site">
@@ -10,13 +10,11 @@
 	<meta name="author" content="Maurits Wilke">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<meta content="Maurits Wilke - Portfolio" property="og:title">
-	<meta content="Hi! Im Maurits, a hobby developer. This site is my portfolio site :)" property="og:description">
+	<meta content="Maurits Wilke - Other" property="og:title">
+	<meta content="Hidden page with small 'projects'" property="og:description">
 	<meta content="https://www.mauritswilke.com" property="og:url">
 	<meta content="#7289da" data-react-helmet="true" name="theme-color">
 	<link rel="icon" href="icons/firefox/firefox-general-16-16.png">
-
-	<link rel="stylesheet" href="../css/cats.css">
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
@@ -29,25 +27,8 @@
 </head>
 
 <body>
-	<script defer src="../js/cats.js"></script>
-	<canvas id="canvas1"></canvas>
-	<script src="../js/main.js"></script>
-
-	<div id="container">
-		<div class="imageSlideshow">
-			<div class="imgBox">
-				<img src="../images/pippa/9.JPG" />
-			</div>
-			<p>Pippa</p>
-		</div>
-
-		<div class="imageSlideshow">
-			<div class="imgBox">
-				<img src="../images/olly/9.jpg" />
-			</div>
-			<p>Olly</p>
-		</div>
-	</div>
+	<h1>Hidden page</h1>
+	<a href="./magicSquares/index.html">Magic Squares</a>
 
 </body>
 
