--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,9 @@
 
 	<link rel="stylesheet" href="./css/index.css">
 
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<script src="https://kit.fontawesome.com/fe20b86b3f.js" crossorigin="anonymous"></script>
-	<link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
 	<link rel="manifest" href="../../manifest.json">
 	<!-- Ios Support because ios -->
 	<link rel="apple-touch-icon" href="icons/apple/android-launchericon-96-96.png">
