Added desktop support for Wishlist

--- a/src/html/cats.html
+++ b/src/html/cats.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Wishlist</title>
+	<title>Maurits Wilke - Cats</title>
 
 	<meta charset="UTF-8">
 	<meta name="description" content="Maurits Wilke - Portfolio Site">
