Updated simulation, entirely new website background!

--- a/src/other/simulation/index.html
+++ b/src/other/simulation/index.html
@@ -5,16 +5,17 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Simulating</title>
-
-	<link rel="stylesheet" href="./index.css">
+	<title>Enviroment</title>
 </head>
 
 <body>
 	<script type="module" src="./js/index.js"></script>
-	<div id="stats">
-		<h4 id="Title">Simulation v0.5</h4>
-	</div>
 </body>
+<style>
+	* {
+		margin: 0;
+		padding: 0;
+	}
+</style>
 
 </html>
