Background available without card! CSS once again fixed (icons)

--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
 	</noscript>
 
 
-	<div class="container">
+	<div id="container">
 		<div id="card">
 			<h1>Maurits Wilke</h1>
 			<p>Hobby Developer</p>
